--- a/index.html
+++ b/index.html
@@ -14,74 +14,72 @@
   <header class="header">
     <div class="header__logo"></div>
   </header>
-  <section class="profile">
-    <div class="profile__avatar"></div>
-    <div class="profile__group">
-      <div class="profile-info">
-        <h1 class="profile-info__title">Жак-Ив Кусто</h1>
-        <p class="profile-info__subtitle">Исследователь океана</p>
+  <main>
+    <section class="profile">
+      <div class="profile__avatar"></div>
+      <div class="profile__group">
+        <div class="profile-info">
+          <h1 class="profile-info__title">Жак-Ив Кусто</h1>
+          <p class="profile-info__subtitle">Исследователь океана</p>
+        </div>
+        <button class="profile-info__edit-button" type="menu"></button>
       </div>
-      <a href="#" class="edit-button">
-        <img class="edit-button__pen" src="./images/pen/Vector.svg" alt="карандаш.">
-      </a>
-    </div>
-    <a href="#" class="add-button">
-      <img class="add-button__cross" src="images/button/Vector.svg" alt="плюсик.">
-    </a>
-  </section>
-  <section class="elements">
-    <div class="element">
-      <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
-      <div class="group">
-        <h2 class="group__title">Карачаевск</h2>
-        <div class="group__like"></div>
+      <button class="profile-info__add-button" type="menu"></button>
+    </section>
+    <section class="elements">
+      <div class="element">
+        <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
+        <div class="element__group">
+          <h2 class="element__title">Карачаевск</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="./images/element/image2.jpg"
-        alt="кусты на песчанном ландшафте. на заднем поаге горы.">
-      <div class="group">
-        <h2 class="group__title">Гора Эльбрус</h2>
-        <div class="group__like"></div>
+      <div class="element">
+        <img class="element__image" src="./images/element/image2.jpg"
+          alt="кусты на песчанном ландшафте. на заднем поаге горы.">
+        <div class="element__group">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
-      <div class="group">
-        <h2 class="group__title">Домбай</h2>
-        <div class="group__like"></div>
+      <div class="element">
+        <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
+        <div class="element__group">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="./images/element/image2.jpg"
-        alt="кусты на песчанном ландшафте. на заднем поаге горы.">
-      <div class="group">
-        <h2 class="group__title">Гора Эльбрус</h2>
-        <div class="group__like"></div>
+      <div class="element">
+        <img class="element__image" src="./images/element/image2.jpg"
+          alt="кусты на песчанном ландшафте. на заднем поаге горы.">
+        <div class="element__group">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
-      <div class="group">
-        <h2 class="group__title">Домбай</h2>
-        <div class="group__like"></div>
+      <div class="element">
+        <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
+        <div class="element__group">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-    <div class="element">
-      <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
-      <div class="group">
-        <h2 class="group__title">Карачаево-Черкессия</h2>
-        <div class="group__like"></div>
+      <div class="element">
+        <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
+        <div class="element__group">
+          <h2 class="element__title">Карачаево-Черкессия</h2>
+          <button class="element__like" type="button"></button>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
   </footer>
   <div class="popup">
 
     <div class="popup__container">
-      <form class="form">
+      <form class="form" name="editProfileForm">
         <h2 class="form__title">Редактировать профиль</h2>
         <input type="text" value="Жак-Ив Кусто" class="form__field-1">
         <input type="text" value="Исследователь океана" class="form__field-2">
@@ -92,7 +90,7 @@
       </form>
     </div>
   </div>
-  <script src="./pages/script.js"></script>
+  <script src="./script/index.js"></script>
 </body>
 
 </html>
