--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <section class="profile">
       <div class="profile__avatar"></div>
       <div class="profile__group">
-        <div class="profile-info">
-          <h1 class="profile-info__title">Жак-Ив Кусто</h1>
-          <p class="profile-info__subtitle">Исследователь океана</p>
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile-info__edit-button" type="button"></button>
+        <button class="profile__edit-button" type="button"></button>
       </div>
-      <button class="profile-info__add-button" type="button"></button>
+      <button class="profile__add-button" type="button"></button>
     </section>
     <section class="elements">
       <div class="element">
