--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__edit-button" type="button"></button>
+        <button class="profile__edit-button" aria-label="edit" type="button"></button>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
     <section class="elements">
       <div class="element">
-        <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
+          <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
         <div class="element__group">
           <h2 class="element__title">Карачаевск</h2>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./images/element/image2.jpg"
-          alt="кусты на песчанном ландшафте. на заднем поаге горы.">
+          <img class="element__image" src="./images/element/image2.jpg"
+            alt="кусты на песчанном ландшафте. на заднем поаге горы.">
         <div class="element__group">
           <h2 class="element__title">Гора Эльбрус</h2>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
+          <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
         <div class="element__group">
           <h2 class="element__title">Домбай</h2>
           <button class="element__like" type="button"></button>
@@ -81,8 +81,8 @@
     <div class="popup__container">
       <form class="form" name="editProfileForm">
         <h2 class="form__title">Редактировать профиль</h2>
-        <input type="text" name="formName" value="Жак-Ив Кусто" class="form__field form__field_value_name">
-        <input type="text" name="formJob" value="Исследователь океана" class="form__field form__field_value_job">
+        <input type="text" name="formName" value="" class="form__field form__field_value_name">
+        <input type="text" name="formJob" value="" class="form__field form__field_value_job">
         <button class="form__submit-button" type="submit">Сохранить</button>
       </form>
       <button class="popup__close-icon" type="button"></button>
