--- a/index.html
+++ b/index.html
@@ -27,23 +27,24 @@
       <button class="profile__add-button" type="button"></button>
     </section>
     <section class="elements">
-      <div class="element">
-          <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
+      <!--<div class="element">
+        <img class="element__image" src="./images/element/image1.jpg" alt="старая церковь на фоне гор.">
         <div class="element__group">
           <h2 class="element__title">Карачаевск</h2>
           <button class="element__like" type="button"></button>
         </div>
+        <div class="element__trash"></div>
       </div>
       <div class="element">
-          <img class="element__image" src="./images/element/image2.jpg"
-            alt="кусты на песчанном ландшафте. на заднем поаге горы.">
+        <img class="element__image" src="./images/element/image2.jpg"
+          alt="кусты на песчанном ландшафте. на заднем поаге горы.">
         <div class="element__group">
           <h2 class="element__title">Гора Эльбрус</h2>
           <button class="element__like" type="button"></button>
         </div>
       </div>
       <div class="element">
-          <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
+        <img class="element__image" src="./images/element/image3.jpg" alt="горы. на переднем плане деревья.">
         <div class="element__group">
           <h2 class="element__title">Домбай</h2>
           <button class="element__like" type="button"></button>
@@ -70,26 +71,60 @@
           <h2 class="element__title">Карачаево-Черкессия</h2>
           <button class="element__like" type="button"></button>
         </div>
-      </div>
+      </div>-->
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
   </footer>
-  <div class="popup">
-
+  <div class="popup popup_form_edit">
     <div class="popup__container">
-      <form class="form" name="editProfileForm">
+      <form class="form form_type_edit" name="editProfileForm">
         <h2 class="form__title">Редактировать профиль</h2>
         <input type="text" name="formName" value="" class="form__field form__field_value_name">
         <input type="text" name="formJob" value="" class="form__field form__field_value_job">
-        <button class="form__submit-button" type="submit">Сохранить</button>
+        <button class="form__submit-button form__submit-button_type_edit" type="submit">Сохранить</button>
       </form>
-      <button class="popup__close-icon" type="button"></button>
+      <button class="popup__close-icon popup__close-icon_form_edit" type="button"></button>
     </div>
-
   </div>
+  <div class="popup popup_form_add">
+    <div class="popup__container">
+      <form class="form form_type_add" name="editProfileForm">
+        <h2 class="form__title">Новое место</h2>
+        <input type="text" name="formName" value="" placeholder="Название"
+          class="form__field form__field_value_appellation">
+        <input type="text" name="formLink" value="" placeholder="Ссылка на картинку"
+          class="form__field form__field_value_link">
+        <button class="form__submit-button form__submit-button_type_add" type="submit">Создать</button>
+      </form>
+      <button class="popup__close-icon popup__close-icon_form_add" type="button"></button>
+    </div>
+  </div>
+
+  <div class="popup-pic">
+    <div class="popup-pic__box">
+      <button class="popup-pic__close"></button>
+      <div class="popup-pic__group">
+        <img src="" class="popup-pic__img">
+        <p class="popup-pic__label">Архыз</p>
+      </div>
+    </div>
+  </div>
+
+  <template class="template">
+    <div class="element">
+      <img class="element__image" src="" alt="">
+      <div class="element__group">
+        <h2 class="element__title"></h2>
+        <button class="element__like" type="button"></button>
+      </div>
+      <div class="element__trash"></div>
+    </div>
+  </template>
+
   <script src="./script/index.js"></script>
+
 </body>
 
 </html>
