--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     </div>
   </div>
 
-  <div class="popup-pic">
+  <div class="popup popup-pic">
     <div class="popup-pic__box">
-      <button class="popup-pic__close"></button>
       <div class="popup-pic__group">
         <img src="" class="popup-pic__img">
         <p class="popup-pic__label">Архыз</p>
       </div>
+      <button class="popup-pic__close"></button>
     </div>
   </div>
 
