--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
-    <section class="elements">
+    <div class="elements">
 
-    </section>
+    </div>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
@@ -60,7 +60,7 @@
   <div class="popup popupImg">
     <div class="popupImg__box">
       <div class="popupImg__group">
-        <img src="" class="popupImg__img">
+        <img class="popupImg__img" src="#" alt="#">
         <p class="popupImg__label"></p>
       </div>
       <button class="popupImg__close"></button>
@@ -69,7 +69,7 @@
 
   <template class="template">
     <div class="element">
-      <img class="element__image" src="" alt="">
+      <img class="element__image" src="#" alt="#">
       <div class="element__group">
         <h2 class="element__title"></h2>
         <button class="element__like" type="button"></button>
