--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <footer class="footer">
     <p class="footer__copyright">&#169; 2022 Mesto Russia</p>
   </footer>
-  <div class="popup popup_form_edit">
+  <div class="popup popup_type_form-edit">
     <div class="popup__container">
       <form class="form form_type_edit" name="editProfileForm">
         <h2 class="form__title">Редактировать профиль</h2>
@@ -57,17 +57,17 @@
     </div>
   </div>
 
-  <div class="popup popupImg">
-    <div class="popupImg__box">
-      <div class="popupImg__group">
-        <img class="popupImg__img" src="#" alt="#">
-        <p class="popupImg__label"></p>
+  <div class="popup picture">
+    <div class="popup__box">
+      <div class="popup__group">
+        <img class="popup__img" src="#" alt="#">
+        <p class="popup__label"></p>
       </div>
-      <button class="popupImg__close"></button>
+      <button class="popup__close-icon_type_img"></button>
     </div>
   </div>
 
-  <template class="template">
+  <template class="card-template">
     <div class="element">
       <img class="element__image" src="#" alt="#">
       <div class="element__group">
