--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img class="popup__img" src="#" alt="#">
         <p class="popup__label"></p>
       </div>
-      <button class="popup__close-icon_type_img"></button>
+      <button class="popup__close-icon_img"></button>
     </div>
   </div>
 
