--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
   </div>
   <div class="popup popup_form_add">
     <div class="popup__container">
-      <form class="form form_type_add" name="editProfileForm" novalidate>
+      <form class="form form_type_add" name="editProfileForm" method="POST">
         <h2 class="form__title">Новое место</h2>
-        <input type="text" name="formName" value="" placeholder="Название" class="form__field form__field_add_name">
-        <input type="text" name="formLink" value="" placeholder="Ссылка на картинку"
+        <input type="text" required id="name2" name="name2" value="" minlength="2" maxlength="30" placeholder="Название" class="form__field form__field_add_name">
+        <span id="error-name2" class="error-message error-message_visible error-message_add"></span>
+        <input type="url" required id="url" name="url" value="" placeholder="Ссылка на картинку"
           class="form__field form__field_add_link">
+        <span id="error-url" class="error-message error-message_visible"></span>
         <button class="form__submit-button form__submit-button_add" type="submit">Создать</button>
-      </form>
+      </form> 
       <button class="popup__close-icon popup__close-icon_form_add" type="button"></button>
     </div>
   </div>
