--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img class="popup__img" src="#" alt="#">
         <p class="popup__label"></p>
       </div>
-      <button class="popup__close-img"></button>
+      <button class="popup__close-icon popup__close-img"></button>
     </div>
   </div>
 
