--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     </div>
   </template>
 
-  <script src="./script/initialCards.js"></script>
-  <script src="./script/index.js"></script>
-  <script src="./script/validate.js"></script>
+  <script type="module" src="./script/index.js"></script>
+
+
 
 </body>
 
